add github actions

--- a/src/EfRest/EfRest.csproj
+++ b/src/EfRest/EfRest.csproj
@@ -3,15 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <NoWarn>S1121,IDE0039</NoWarn>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CloudCqs" Version="0.2.0" />
+    <PackageReference Include="CloudCqs" Version="0.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\cloud-cqs\src\CloudCqs\CloudCqs.csproj" />
   </ItemGroup>
 </Project>
