--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,12 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
-# Don't use tabs for indentation.
 [*]
+charset = utf-8-bom
 indent_style = space
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-# (Please don't specify an indent_size here; that has too many unintended consequences.)
 
-# Code files
 [*.{cs,csx,vb,vbx}]
 indent_size = 4
-insert_final_newline = true
-charset = utf-8-bom
-
+dotnet_sort_system_directives_first = true
