--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,37 +16,16 @@ jobs:
         with:
           dotnet-version: 5.0.x
 
-      # Publish
-      - name: publish on version change
+      - name: publish EfRest
         id: publish_nuget
         uses: rohith/publish-nuget@v2
         with:
-          # Filepath of the project to be packaged, relative to root of repository
           PROJECT_FILE_PATH: src/EfRest/EfRest.csproj
-
-          # NuGet package id, used for version detection & defaults to project name
-          # PACKAGE_NAME: Core
-
-          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          # VERSION_FILE_PATH: Directory.Build.props
-
-          # Regex pattern to extract version info in a capturing group
-          # VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          # VERSION_STATIC: ${{ github.event.inputs.version }}
-
-          # Flag to toggle git tagging, enabled by default
-          # TAG_COMMIT: true
-
-          # Format of the git tag, [*] gets replaced with actual version
-          # TAG_FORMAT: v*
-
-          # API key to authenticate with NuGet server
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
 
-          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          # NUGET_SOURCE: https://api.nuget.org
-
-          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-          # INCLUDE_SYMBOLS: false
+      - name: publish EfRest.Swagger
+        id: publish_nuget
+        uses: rohith/publish-nuget@v2
+        with:
+          PROJECT_FILE_PATH: src/EfRest.Swagger/EfRest.Swagger.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
