--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,14 +17,14 @@ jobs:
           dotnet-version: 5.0.x
 
       - name: publish EfRest
-        id: publish_nuget
+        id: publish_efrest
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/EfRest/EfRest.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
 
       - name: publish EfRest.Swagger
-        id: publish_nuget
+        id: publish_efrest_swagger
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/EfRest.Swagger/EfRest.Swagger.csproj
