--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,19 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Setup dotnet
+      - name: Setup dotnet 6.0
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.x
-
+          dotnet-version: 6.0.x
       - name: publish EfRest
         id: publish_efrest
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/EfRest/EfRest.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-
       - name: publish EfRest.Swagger
         id: publish_efrest_swagger
         uses: rohith/publish-nuget@v2
