Fix Github Action definition

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,20 +22,17 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
-
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - name: Install SonarCloud scanner
         run: dotnet tool update --global dotnet-sonarscanner
-      - name: Install dotnet-format
-        run: dotnet tool update --global dotnet-format
       - name: Format check
-        run: dotnet format --check
+        run: dotnet format --verify-no-changes
       - name: Build for check
         run: dotnet build -warnaserror
       - name: Test
-        run: dotnet test --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+        run: dotnet test --no-build --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
