--- a/example/EfRest.Example.Model/EfRest.Example.Model.csproj
+++ b/example/EfRest.Example.Model/EfRest.Example.Model.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CloudCqs" Version="0.5.3" />
+  </ItemGroup>
 </Project>
