--- a/src/EfRest.Swagger/EfRest.Swagger.csproj
+++ b/src/EfRest.Swagger/EfRest.Swagger.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudCqs" Version="0.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.3.1" />
   </ItemGroup>
