--- a/src/EfRest/EfRest.csproj
+++ b/src/EfRest/EfRest.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="CloudCqs" Version="0.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
 </Project>
