--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,10 +14,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Setup dotnet 5.0
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 5.0.x
       - name: Setup dotnet 6.0
         uses: actions/setup-dotnet@v1
         with:
@@ -28,9 +24,11 @@ jobs:
       - name: Install SonarCloud scanner
         run: dotnet tool update --global dotnet-sonarscanner
       - name: Format check
-        run: dotnet format --verify-no-changes
+        run: |
+          dotnet format style --verify-no-changes
+          dotnet format analyzers --verify-no-changes
       - name: Build for check
-        run: dotnet build -warnaserror
+        run: dotnet build -c Release -warnaserror
       - name: Test
         run: dotnet test --no-build --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       - name: Build and analyze
